// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddRecipeForm component > render empty form 1`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="name"
      >
        Name
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="description"
      >
        Description
      </label>
      <div
        class="col-md-9"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="e.g., water, apple 2, sugar 250g"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (e.g., 4 plates, 800g)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            class="bi bi-check2"
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
            />
          </svg>
           Submit 
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 1`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="name"
      >
        Name
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some name error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="description"
      >
        Description
      </label>
      <div
        class="col-md-9"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="e.g., water, apple 2, sugar 250g"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (e.g., 4 plates, 800g)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            class="bi bi-check2"
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
            />
          </svg>
           Submit 
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 2`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="name"
      >
        Name
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="description"
      >
        Description
      </label>
      <div
        class="col-md-9"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some description error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="e.g., water, apple 2, sugar 250g"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="invalid-feedback d-block"
          >
            Some ingredient error.
          </div>
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="invalid-feedback d-block"
          >
            Some method step error.
          </div>
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (e.g., 4 plates, 800g)"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            class="bi bi-check2"
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
            />
          </svg>
           Submit 
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm component > render with various errors 3`] = `
<div>
  <form
    class="mt-4"
    novalidate=""
  >
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="name"
      >
        Name
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="name"
          name="name"
          placeholder="Name of your new recipe"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="description"
      >
        Description
      </label>
      <div
        class="col-md-9"
      >
        <textarea
          class="form-control"
          id="description"
          name="description"
          placeholder="A few words describing your recipe"
          style="height: 100px;"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newIngredient"
      >
        Ingredients
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <input
              class="form-control"
              id="newIngredient"
              name="newIngredient"
              placeholder="e.g., water, apple 2, sugar 250g"
              value=""
            />
            <button
              class="btn btn-success"
              type="button"
            >
              <svg
                class="bi bi-plus-lg"
                fill="currentColor"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="newMethodStep"
      >
        Method steps
      </label>
      <div
        class="col-md-9"
      >
        <div
          class="row"
        >
          <div
            class="input-group"
          >
            <textarea
              class="form-control"
              id="newMethodStep"
              name="newMethodStep"
              placeholder="Instructions step-by-step to cook your recipe"
              style="height: 100px;"
            />
            <div
              class="input-group-text"
            >
              <button
                class="btn btn-sm btn-success"
                type="button"
              >
                <svg
                  class="bi bi-plus-lg"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="row"
        />
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="cookingTime"
      >
        Cooking time
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="cookingTime"
          name="cookingTime"
          placeholder="In minutes"
          type="number"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some cooking time error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <label
        class="col-md-3 col-form-label text-md-end"
        for="portionSize"
      >
        Portion size
      </label>
      <div
        class="col-md-9"
      >
        <input
          class="form-control"
          id="portionSize"
          name="portionSize"
          placeholder="Amount and unit (e.g., 4 plates, 800g)"
        />
        <div
          class="invalid-feedback d-block"
        >
          Some portion size error.
        </div>
      </div>
    </div>
    <div
      class="row mb-4"
    >
      <div
        class="col-12 text-center"
      >
        <button
          class="btn btn-primary"
          type="submit"
        >
          <svg
            class="bi bi-check2"
            fill="currentColor"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0"
            />
          </svg>
           Submit 
        </button>
      </div>
    </div>
  </form>
</div>
`;
